--- a/src/client/UI.ui
+++ b/src/client/UI.ui
@@ -162,7 +162,7 @@
    <widget class="QLabel" name="showPic1">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>180</y>
       <width>64</width>
       <height>18</height>
@@ -178,7 +178,7 @@
    <widget class="QLabel" name="showPic2">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>410</x>
       <y>180</y>
       <width>64</width>
       <height>18</height>
@@ -194,7 +194,7 @@
    <widget class="QLabel" name="showPic3">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>510</x>
       <y>180</y>
       <width>64</width>
       <height>18</height>
@@ -316,6 +316,169 @@
      <string>请输入你的描述</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="handButton0">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="handButton1">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="handButton2">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="handButton3">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="handButton4">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="handButton5">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>350</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="showButton0">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>150</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="accessibleName">
+     <string/>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="showButton1">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>150</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="accessibleName">
+     <string/>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="showButton2">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>150</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="accessibleName">
+     <string/>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="showButton3">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>150</y>
+      <width>31</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="accessibleName">
+     <string/>
+    </property>
+    <property name="text">
+     <string>选它</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="DescLabel">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>320</y>
+      <width>241</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>22</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -363,9 +526,179 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>handButton0</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand0()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>171</x>
+     <y>397</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>173</x>
+     <y>487</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>handButton1</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand1()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>249</x>
+     <y>389</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>254</x>
+     <y>498</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>handButton2</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand2()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>333</x>
+     <y>388</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>331</x>
+     <y>515</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>handButton3</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand3()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>414</x>
+     <y>393</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>427</x>
+     <y>515</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>handButton4</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand4()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>499</x>
+     <y>388</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>495</x>
+     <y>534</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>handButton5</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseHand5()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>581</x>
+     <y>387</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>585</x>
+     <y>496</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showButton0</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseShow0()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>256</x>
+     <y>186</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>250</x>
+     <y>112</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showButton1</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseShow1()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>355</x>
+     <y>181</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>340</x>
+     <y>105</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showButton2</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseShow2()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>454</x>
+     <y>182</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>424</x>
+     <y>102</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showButton3</sender>
+   <signal>clicked()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>ChoseShow3()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>549</x>
+     <y>185</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>502</x>
+     <y>98</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>EnterRoom()</slot>
   <slot>Ready()</slot>
+  <slot>ChoseHand0()</slot>
+  <slot>ChoseHand1()</slot>
+  <slot>ChoseHand2()</slot>
+  <slot>ChoseHand3()</slot>
+  <slot>ChoseHand4()</slot>
+  <slot>ChoseHand5()</slot>
+  <slot>ChoseShow0()</slot>
+  <slot>ChoseShow1()</slot>
+  <slot>ChoseShow2()</slot>
+  <slot>ChoseShow3()</slot>
  </slots>
 </ui>
