fix bugs in showing pic info

--- a/src/client/UI.ui
+++ b/src/client/UI.ui
@@ -485,8 +485,14 @@
       <x>210</x>
       <y>180</y>
       <width>100</width>
-      <height>18</height>
+      <height>54</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -498,8 +504,14 @@
       <x>310</x>
       <y>180</y>
       <width>100</width>
-      <height>18</height>
+      <height>54</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -514,8 +526,14 @@
       <x>410</x>
       <y>180</y>
       <width>100</width>
-      <height>18</height>
+      <height>54</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -527,8 +545,14 @@
       <x>510</x>
       <y>180</y>
       <width>100</width>
-      <height>18</height>
+      <height>54</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -543,6 +567,12 @@
       <height>18</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -555,6 +585,12 @@
       <width>100</width>
       <height>18</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -569,6 +605,12 @@
       <height>18</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -581,6 +623,12 @@
       <width>100</width>
       <height>18</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
